Mybatis to JPA(diary)